karnc/tests/fixtures/negative/228_refinement_base_not_bearer/src/demo.karn
context demo

actor Admin = Visitor where hasClaim("admin")

service api from http {
  on GET("/x") by a: Admin () -> Effect[HttpResult[String]] {
    Ok("x")
  }
}
